# demo_v1

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: project-demo.mdc  python-ml-demo.mdc
src/mnist_mlp/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
tests/: test_model.py
